--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     </ul>
     <a href="./hypertext/education.html">Education</a>
     <a href="./hypertext/prof-exp.html">Professional Experience</a>
+    <a href="./hypertext/know-more.html">Know More</a>
   </body>
 </html>
