--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ul>
     <a href="./hypertext/education.html">Education</a>
     <a href="./hypertext/prof-exp.html">Professional Experience</a>
-    <a href="./hypertext/prj.html">Projects</a>
+    <!--<a href="./hypertext/prj.html">Projects</a>-->
     <a href="./hypertext/know-more.html">Know More</a>
   </body>
 </html>
