--- a/hypertext/know-more.html
+++ b/hypertext/know-more.html
@@ -4,22 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>More</title>
+    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Pixelify+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h2>Skills</h2>
     <ul>
-      <li>QlikSense Administration</li>
-      <li>Docker</li>
-      <li>Python</li>
-      <li>HTML</li>
-      <li>Embedded Systems</li>
+      <li><p>QlikSense Administration</p></li>
+      <li><p>Docker</p></li>
+      <li><p>Python</p></li>
+      <li><p>HTML</p></li>
+      <li><p>Embedded Systems</p></li>
     </ul>
     <hr />
     <h2>Languages</h2>
     <ul>
-      <li>English</li>
-      <li>Malayalam</li>
-      <li>Hindi</li>
+      <li><p>English</p></li>
+      <li><p>Malayalam</p></li>
+      <li><p>Hindi</p></li>
     </ul>
     <hr />
     <h2>Interests</h2>
@@ -33,18 +52,23 @@
     <h2>Community Outreach Programs</h2>
     <ul>
       <li>
-        Student Social Responsibility Program(SSR)
+        <p>Student Social Responsibility Program(SSR)</p>
+
         <ul>
           <li>
-            Designed and Implemented an automatic sanitiser dispenser as part of
-            our Student Social Responsibility program on several Orphanages and
-            Old age Homes during the ongoing Covid-19 crisis as children and the
-            elderly are at risk of getting the disease.
+            <p>
+              Designed and Implemented an automatic sanitiser dispenser as part
+              of our Student Social Responsibility program on several Orphanages
+              and Old age Homes during the ongoing Covid-19 crisis as children
+              and the elderly are at risk of getting the disease.
+            </p>
           </li>
           <li>
-            Conducted an awareness campaign on Covid-19 and its vaccine
-            presented by Dr Vinod Mohan-Head of Department, Heywood Hospitals,
-            Massachusetts USA in each of the places we implemented the device.
+            <p>
+              Conducted an awareness campaign on Covid-19 and its vaccine
+              presented by Dr Vinod Mohan-Head of Department, Heywood Hospitals,
+              Massachusetts USA in each of the places we implemented the device.
+            </p>
           </li>
         </ul>
       </li>
@@ -52,12 +76,12 @@
     <hr />
     <h2>Hobbies</h2>
     <ul>
-      <li>Photograpy</li>
-      <li>Reading</li>
-      <li>Coding</li>
-      <li>Learning New Skills</li>
+      <li><p>Photograpy</p></li>
+      <li><p>Reading</p></li>
+      <li><p>Coding</p></li>
+      <li><p>Learning New Skills</p></li>
     </ul>
-    <hr />
+    <hr class="addpad" />
     <a href="../index.html">Home</a>
   </body>
 </html>
