--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abhijith V</title>
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Pixelify+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Abhijith V</h1>
-    <img src="./assets/profile-image.JPG" alt="Image of Abhijith V" />
+    <div id="name">
+      <h1>Abhijith V</h1>
+      <img src="./assets/profile-image.JPG" alt="Image of Abhijith V" />
+    </div>
     <a href="./hypertext/education.html">Education</a>
     <a href="./hypertext/prof-exp.html">Professional Experience</a>
     <a href="./hypertext/prj.html">Projects</a>
@@ -17,16 +38,22 @@
 
     <ul>
       <li>
-        Dedicated Engineering graduate aspiring to achieve great feats in the
-        field of Software Engineering, Web Development and Blockchain
+        <p>
+          Dedicated Engineering graduate aspiring to achieve great feats in the
+          field of Software Engineering, Web Development and Blockchain
+        </p>
       </li>
       <li>
-        Intermediate level experience in QlikSense, Python, Web Development and
-        basic knowledge of Web3
+        <p>
+          Intermediate level experience in QlikSense, Python, Web Development
+          and basic knowledge of Web3
+        </p>
       </li>
       <li>
-        Ability to provide manage and lead necessary tasks and translate
-        business requirements into technical solution for the firm
+        <p>
+          Ability to provide manage and lead necessary tasks and translate
+          business requirements into technical solution for the firm
+        </p>
       </li>
     </ul>
   </body>
