--- a/hypertext/education.html
+++ b/hypertext/education.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Education</title>
+    <link rel="stylesheet" href="../assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Pixelify+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Education</h1>
@@ -14,8 +33,8 @@
         </h2>
         <h3><a href="https://amrita.edu/">Amrita Vishwa Vidhyapeetham</a></h3>
         <ul>
-          <li>07/2018 – 07/2022</li>
-          <li>Kollam, Kerala, India</li>
+          <li><p>07/2018 – 07/2022</p></li>
+          <li><p>Kollam, Kerala, India</p></li>
         </ul>
       </li>
       <li>
@@ -26,8 +45,8 @@
           >
         </h3>
         <ul>
-          <li>2016 – 2018</li>
-          <li>Kollam, Kerala, India</li>
+          <li><p>2016 – 2018</p></li>
+          <li><p>Kollam, Kerala, India</p></li>
         </ul>
       </li>
       <li>
@@ -38,8 +57,8 @@
           >
         </h3>
         <ul>
-          <li>2015 – 2017</li>
-          <li>Kollam, Kerala, India</li>
+          <li><p>2015 – 2017</p></li>
+          <li><p>Kollam, Kerala, India</p></li>
         </ul>
       </li>
     </ul>
